--- a/server/game/package.json
+++ b/server/game/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +13,7 @@
   "dependencies": {
     "amqplib": "^0.10.3",
     "axios": "^1.2.1",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-http-proxy": "^1.6.3",
     "mongoose": "^6.8.1",
